feat: Implementa geração de relatórios PDF de passageiros
- Adiciona as dependências `jspdf` e `jspdf-autotable`.
- Cria o serviço `report.service.js` para encapsular a lógica de geração do PDF.
- O relatório inclui cabeçalho com logo, dados do passeio (destino, data, horários) e uma tabela com a lista de passageiros.
- Adiciona o botão "Gerar Relatório" na tela de Gerenciamento de Passeio.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "firebase": "^12.3.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
