--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "penaestrada-tour-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Gerenciador de Viagens para a Agência Pé Na Estrada Tour",
+  "author": "Ducosmo",
   "type": "module",
+  "homepage": ".",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
     "@react-input/mask": "^2.0.4",
     "firebase": "^12.3.0",
-    "jspdf": "^3.0.3",
-    "jspdf-autotable": "^5.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
@@ -23,12 +28,32 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
-    "electron": "^38.2.2",
-    "electron-builder": "^26.0.12",
+    "electron": "^31.2.1",
+    "electron-builder": "^24.13.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
+  },
+  "build": {
+    "appId": "com.penaestradatour.app",
+    "productName": "Pé Na Estrada Tour",
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "release"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
